--- a/public/index_voting.html
+++ b/public/index_voting.html
@@ -27,7 +27,7 @@
                                 <li> <a href="/" ng-hide="isLoggedIn"> Login </a> </li>
                                 <li> <a href="/signup" ng-hide="isLoggedIn"> Sign Up</a></li>
                                 <li> <a href="/myPolls" ng-show="isLoggedIn"> MyPolls </a></li>
-                                <li> <a href="/logout" ng-show="isLoggedIn"> Logout </a></li>
+                                <li> <a href="/" ng-show="isLoggedIn" ng-click="logout()" > Logout </a></li>
                             </ul>
                         </nav>
                         
