Fixing minor bugs

--- a/public/index_voting.html
+++ b/public/index_voting.html
@@ -2,11 +2,14 @@
 
 <html>
     <head> 
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
  	    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
  	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+    	<script src="https://rawgit.com/jtblin/angular-chart.js/master/dist/angular-chart.min.js"></script>
 	    <script src="controllers/voting_client.js" ></script>
 	    <script src="controllers/angular/app.js" ></script>
 	    <script src="controllers/angular/approutes.js" ></script>
@@ -21,16 +24,35 @@
                     <div class="col-sm-12">
                         <nav class="navbar navbar-default">
                             <div class="navbar-header">
-                                 <a href="/" class="navbar-brand">  <strong>Come, Lets Vote!</strong> </a>
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar_content" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                  </button>
+                                 <a href="/about" class="navbar-brand">  <strong>Come, Lets Vote!</strong> </a>
                             </div>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li> <a href="/" ng-hide="isLoggedIn"> Login </a> </li>
-                                <li> <a href="/signup" ng-hide="isLoggedIn"> Sign Up</a></li>
-                                <li> <a href="/myPolls" ng-show="isLoggedIn"> MyPolls </a></li>
-                                <li> <a href="/" ng-show="isLoggedIn" ng-click="logout()" > Logout </a></li>
-                            </ul>
+                            <div class="collapse navbar-collapse" id="navbar_content">
+                                <ul class="nav navbar-nav">
+                                    <li> <a href="/user_home" ng-show="isLoggedIn">Home</a> </li>
+                                    <li> <a href="/about"> About</a> </li>
+                                </ul>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li> <p class="navbar-text" ng-show="isLoggedIn" > Welcome {{userName}} </p></li>
+                                    <li> <a href="/" ng-hide="isLoggedIn"> Login </a> </li>
+                                    <li> <a href="/signup" ng-hide="isLoggedIn"> Sign Up</a></li>
+                                    <li> <a href="/" ng-show="isLoggedIn" ng-click="logout()" > Logout </a></li>
+                                </ul>
+                            </div>
                         </nav>
-                        
+                        <div class="banner_div">
+                            <h1> VotePlex </h1>
+                            <div ng-show="isLoggedIn"> 
+                                <h3> Welcome {{userName}} </h3>
+                                <a href="/user_home" class="btn btn-default" > Create New Poll </a>
+                                <a href="/polls" class="btn btn-default" > View Polls </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
